--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
         <div class="items-center flex flex-wrap">
           <div class="w-full lg:w-6/12 px-4 ml-auto mr-auto text-center">
             <div class="pr-12">
-              <h1 class="text-white font-semibold text-5xl">
+              <h1 class="text-white font-semibold text-5xl" data-aos="fade-up">
                 Welcome your epiphany.
               </h1>
-              <p class="mt-4 text-lg text-gray-300">
+              <p class="mt-4 text-lg text-gray-300" data-aos="fade-right" data-aos-delay="1000">
                 Lorem ipsum dolor sit. Eum totam aspernatur aliquam praesentium aperiam magni, dignissimos, atque incidunt fuga nulla distinctio eligendi enim placeat nesciunt, soluta maxime nihil ipsa minus!
               </p>
             </div>
@@ -122,7 +122,7 @@
       <div class="container mx-auto px-4">
         <div class="flex flex-wrap">
           <!-- Card -->
-          <div class="lg:pt-12 pt-6 w-full md:w-4/12 px-4 text-center">
+          <div class="lg:pt-12 pt-6 w-full md:w-4/12 px-4 text-center" data-aos="fade-right" data-aos-delay="2000">
             <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg">
               <div class="px-4 py-5 flex-auto">
                 <div class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-red-400">
@@ -138,7 +138,7 @@
             </div>
           </div>
           <!-- Card -->
-          <div class="w-full md:w-4/12 px-4 text-center">
+          <div class="w-full md:w-4/12 px-4 text-center" data-aos="fade-right" data-aos-delay="1700">
             <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg">
               <div class="px-4 py-5 flex-auto">
                 <div class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-blue-400">
@@ -154,7 +154,7 @@
             </div>
           </div>
           <!-- Card -->
-          <div class="pt-6 w-full md:w-4/12 px-4 text-center">
+          <div class="pt-6 w-full md:w-4/12 px-4 text-center" data-aos="fade-right" data-aos-delay="1400">
             <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg">
               <div class="px-4 py-5 flex-auto">
                 <div class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-green-400">
@@ -174,7 +174,7 @@
         <!-- Text Box and Card Container -->
         <div class="flex flex-wrap items-center mt-32">
           <!-- Text Box Container -->
-          <div class="w-full md:w-5/12 px-4 mr-auto ml-auto">
+          <div class="w-full md:w-5/12 px-4 mr-auto ml-auto" data-aos="flip-left">
             <!-- Text Box -->
             <div class="text-gray-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-gray-100">
               <!-- Icon -->
@@ -197,7 +197,7 @@
           </div>
 
           <!-- Image Cap & Text Card -->
-          <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
+          <div class="w-full md:w-4/12 px-4 mr-auto ml-auto" data-aos="flip-right" data-aos-delay="1000">
             <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded-lg bg-orange-500">
               <!-- Image -->
               <img
@@ -259,7 +259,7 @@
       <!-- Section Container -->
       <div class="container mx-auto px-4">
         <div class="items-center flex flex-wrap">
-          <div class="w-full md:w-4/12 ml-auto mr-auto px-4"> 
+          <div class="w-full md:w-4/12 ml-auto mr-auto px-4" data-aos="zoom-in-down" data-aos-delay="1000"> 
             <!-- Image -->
             <img
               alt="..."
@@ -268,7 +268,7 @@
             />
           </div>
           <!-- Text Box Container-->
-          <div class="w-full md:w-5/12 ml-auto mr-auto px-4">
+          <div class="w-full md:w-5/12 ml-auto mr-auto px-4" data-aos="zoom-in-down">
             <div class="md:pr-12">
               <div class="text-pink-600 p-3 text-center inline-flex items-center justify-center w-16 h-16 mb-6 shadow-lg rounded-full bg-pink-300">
                 <!-- Icon -->
@@ -356,7 +356,7 @@
               <img
                 alt="..."
                 src="https://randomuser.me/api/portraits/women/31.jpg"               
-                class="shadow-lg rounded-full max-w-full mx-auto"
+                class="shadow-lg rounded-full max-w-full mx-auto" data-aos="zoom-in"
                 style="max-width: 120px;"
               />
               <div class="pt-6 text-center">
@@ -389,7 +389,7 @@
               <img
                 alt="..."
                 src="https://randomuser.me/api/portraits/women/19.jpg"
-                class="shadow-lg rounded-full max-w-full mx-auto"
+                class="shadow-lg rounded-full max-w-full mx-auto" data-aos="zoom-in" data-aos-delay="500"
                 style="max-width: 120px;"
               />
               <div class="pt-6 text-center">
@@ -418,7 +418,7 @@
               <img
                 alt="..."
                 src="https://randomuser.me/api/portraits/women/3.jpg"
-                class="shadow-lg rounded-full max-w-full mx-auto"
+                class="shadow-lg rounded-full max-w-full mx-auto" data-aos="zoom-in" data-aos-delay="1000"
                 style="max-width: 120px;"
               />
               <div class="pt-6 text-center">
@@ -451,7 +451,7 @@
               <img
                 alt="..."
                 src="https://randomuser.me/api/portraits/women/0.jpg"
-                class="shadow-lg rounded-full max-w-full mx-auto"
+                class="shadow-lg rounded-full max-w-full mx-auto" data-aos="zoom-in" data-aos-delay="1500"
                 style="max-width: 120px;"
               />
               <div class="pt-6 text-center">
@@ -746,7 +746,14 @@
 
 <!-- Animation on Scroll Library -->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>AOS.init();</script>
+<script>AOS.init({
+  offset: 120, // offset (in px) from the original trigger point
+  delay: 200, // values from 0 to 3000, with step 50ms
+  duration: 1400, // values from 0 to 3000, with step 50ms
+  easing: 'ease', // default easing for AOS animations
+  once: false, // whether animation should happen only once - while scrolling down
+  mirror: false, // whether elements should animate out while scrolling past them
+});</script>
 
 <!-- Navigation Script -->
 <script>
